--- a/app/pages/Our-blogs/style.css
+++ b/app/pages/Our-blogs/style.css
@@ -3,7 +3,8 @@
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: white;
+    padding: 1rem;
+    border-radius: 15px;
   }
   
   .swiper-slide {
@@ -27,7 +28,7 @@
     text-transform: none !important;
     letter-spacing: 0;
     font-variant: initial;
-    background-color: gray;
+    background-color: red;
     padding: 15px 20px 20px 15px;
     border-radius: 50%;
     width: 100%;
