--- a/app/pages/All-courses/allCourses.css
+++ b/app/pages/All-courses/allCourses.css
@@ -48,3 +48,13 @@
   padding: 0px;
   white-space: nowrap;
 }
+
+.multi-range-slider .bar-inner-left , 
+.multi-range-slider .bar-inner-right{
+  background-color:#984D9F;
+}
+
+ 
+.multi-range-slider .thumb::before {
+  background-color:#984D9F;
+}
