--- a/app/pages/Course-details/styles.css
+++ b/app/pages/Course-details/styles.css
@@ -27,7 +27,7 @@
     text-transform: none !important;
     letter-spacing: 0;
     font-variant: initial;
-    background-color: gray;
+    background-color:#E2508D;
     padding: 15px 20px 20px 15px;
     border-radius: 50%;
     width: 100%;
