--- a/app/globals.css
+++ b/app/globals.css
@@ -14,13 +14,14 @@
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.436); 
+    background:#EC8AB3;
     border-radius: 0px;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background:#EC8AB3;
+
   }
 
 html{
